# speace_ds

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  speace_brain.py
.github/workflows/: ci.yml
agency/: __init__.py  tool_registry.py
brain/: __init__.py  amygdala.py  astrocyte_layer.py  basal_ganglia.py  bio_core.py  brainstem.py  cerebellum.py  cingulate_cortex.py  frontal_lobe.py  hemispheres.py  hippocampus.py  insula.py  occipital_lobe.py  parietal_lobe.py  temporal_lobe.py  thalamus.py
cognitive/: __init__.py  attention.py  consciousness_gate.py  predictive_coding.py  working_memory.py
config/: __init__.py  settings.yaml
core/: __init__.py  contracts.py  graph_engine.py  state_bus.py
docs/: SPEACE_ENGINEERING.md  __init__.py
evolution/: __init__.py  digital_dna.py  fitness.py  mutation_lab.py
learning/: __init__.py  metalearner.py  plasticity.py  reinforcement.py
llm/: __init__.py  router.py
memory/: __init__.py  consolidation.py  hybrid_memory.py  real_embeddings.py  reconsolidation.py  semantic_store.py
monitoring/: __init__.py  cognitive_metrics.py  dashboard.py  energy_monitor.py
neuromodulation/: __init__.py  circadian.py  criticality.py  neurotransmitters.py
safety/: __init__.py  ethical_constraints.py  safeproactive.py
swarm/: __init__.py  orchestrator.py
tests/: __init__.py  test_brain_flow.py  test_emergence.py  test_memory.py
