[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speace"
version = "0.1.0"
description = "SPEACE Digital Brain — cervello digitale bio-ispirato energeticamente efficiente"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Roberto De Biase", email = "robertodebiase@users.noreply.github.com" },
]
keywords = ["ai", "brain", "cognitive", "neuroscience", "llm", "digital-brain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "networkx>=3.3",
    "numpy>=1.26.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0",
    "anthropic>=0.30.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "streamlit>=1.28.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
speace-brain = "speace_brain:main"
speace = "speace_brain:main"

[project.urls]
Homepage = "https://github.com/robertodebiasespeace/speace_ds"
Repository = "https://github.com/robertodebiasespeace/speace_ds"
Issues = "https://github.com/robertodebiasespeace/speace_ds/issues"

[tool.setuptools]
py-modules = ["speace_brain"]
packages = [
    "core", "brain", "cognitive", "memory", "learning",
    "evolution", "neuromodulation", "llm", "agency", "safety",
    "swarm", "monitoring", "config", "docs", "tests",
]

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.package-data]
config = ["settings.yaml"]
